--- a/_output.yml
+++ b/_output.yml
@@ -7,7 +7,7 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-        <li class="toc-logo"><a href="./"><img src="img/bookcoverA4.png"></a></li>
+        <li class="toc-logo"><a href="./index.html"><img src="img/bookcoverA4.png"></a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
     download: ["pdf", "epub"]
